# H-Judge

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.fsx  hjudge.sln  hjudge_ci.yml  nuget.config  paket.dependencies  renovate.json
EFSecondLevelCache.Core/: EFAsyncEnumerable.cs  EFAsyncEnumerator.cs  EFAsyncTaskEnumerable.cs  EFAsyncTaskEnumerator.cs  EFCachedDbSet.cs  EFCachedDbSetExtensions.cs  EFCachedQueryProvider.cs  EFCachedQueryable.cs  EFChangeTrackerExtensions.cs  EFQueryExpressionVisitor.cs  EFSecondLevelCache.Core.csproj  README.md
SpanJson/: JsonConstants.cs  JsonReader.PrimitiveWrappers.cs  SpanJson.csproj
hjudge.Core/: .gitignore
hjudge.Exec/: Cargo.toml
hjudge.Exec.Linux/: CMakeLists.txt  Cargo.toml
hjudge.Exec.Linux/src/: lib.rs
hjudge.Exec.Windows/: Executor.cpp  Executor.h  hjudge.Exec.Windows.vcxproj  hjudge.Exec.Windows.vcxproj.filters
hjudge.Exec/src/: exec_options.rs  judge_linux.rs  judge_windows.rs  lib.rs
hjudge.RpcInterface/: FileInterface.proto  hjudge.RpcInterface.csproj
hjudge.Shared/: hjudge.Shared.csproj
hjudge.WebFrontEnd/: hjudge.WebFrontEnd.csproj
hjudge.WebHost/: .gitignore
hjudgeCore/: AnswerJudgeOptionBuilder.cs  AnswerPoint.cs  BuildOption.cs  BuildOptionBuilder.cs  CodeJudgeOptionBuilder.cs  ComparingOption.cs  CompilerOption.cs  DataPoint.cs  Judge.cs  JudgeMain.cs  JudgeOption.cs  JudgeOptionBuilder.cs  JudgePoint.cs  JudgeResult.cs  ProblemMatcher.cs  RunOption.cs  SpecialJudgeOption.cs  StaticCheckOption.cs  hjudgeCore.csproj
hjudgeExecWindows/: Executor.cpp  (+2 more)
(+742 files in other folders)
